--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html> 
 <title>Welkom</title>
 
-<body><h1>Welkom<h1></body>
+<body>
+  <h1>Welkom<h1>
+    <p>ik mis de glitterplaatjes</p>
+  </body>
 </html>
